# shell-assistant

./: .gitignore  Dockerfile  Dockerfile.ubuntu  README.md  install.sh  pyproject.toml
.github/workflows/: docker.yml  publish.yml
docker/zsh-toolbox/: Dockerfile  README.md  docker-compose.yml  starship.toml
shai/: autocomplete.py  cli.py  config.py  context.py  system_info.py
shai/providers/: __init__.py  anthropic.py  base.py  openai.py
shai/shell/: shai.bash  shai.zsh
shell/: setup.sh  shai-docker.bash  shai-docker.sh  shai-docker.zsh  shai.bash  shai.zsh  starship.toml
